Stopping image overflow on bottom links

--- a/themes/harassmap/assets/scss/pages/_homepage.scss
+++ b/themes/harassmap/assets/scss/pages/_homepage.scss
@@ -30,6 +30,7 @@
   position: relative;
   height: 220px;
   width: 100%;
+  overflow: hidden;
 
   .img {
     position: absolute;
